# ANSI_C_Mike_Wazowski_group

./: .gitignore  README.md
Assigment1/template/src/: binarize.c  task.c
Assigment1/template/tests/: test_binarize.c  test_task.c
Assigment2/ha-2/src/: priority_queue.c  stack.c
Assigment2/ha-2/tests/: test_queue.c  test_stack.c
Assigment3/ha-3/tests/: test_bitMap.c
Assignment1/: README.md
Assignment1/template/tests/: test_binarize.c  test_task.c
Assignment2/: README.md
Assignment3/ha-3/src/: bitMap.c  bitMap.h
Assignment3/ha-3/tests/: test_bitMap.c
Assignment4/ha-4/src/: vector.c  vector_int.c  vector_int.h
Assignment4/ha-4/tests/: test_vector.c  test_vector_int.c  test_vector_qsort.c
Assignment4/src/: vector.c
HW-1/1-20/: CMakeLists.txt
HW-1/1-20/src/: detab.c  detab.h
HW-1/1-20/tests/: CMakeLists.txt  test_detab.c
HW-1/1-21/: CMakeLists.txt
HW-1/1-21/src/: entab.c  entab.h
HW-1/1-22/: CMakeLists.txt
HW-1/1-22/src/: enter.c  enter.h
HW-1/1-23/: CMakeLists.txt  task.c
threads/: CMakeLists.txt  main.c
